src/eventsub/automod/message/snapshots/twitch_api__eventsub__automod__message__update__parse_payload_v1.snap
---
source: src/eventsub/automod/message/update.rs
expression: parsed
---
AutomodMessageUpdateV1(
    Payload {
        subscription: EventSubscriptionInformation {
            id: "79cc58a2-1c34-48e0-97fe-126d5d77bf10",
            status: Enabled,
            cost: 0,
            condition: AutomodMessageUpdateV1 {
                broadcaster_user_id: "129546453",
                moderator_user_id: "129546453",
            },
            created_at: "2024-11-03T11:52:04.695680375Z",
            transport: Websocket(
                WebsocketTransportResponse {
                    session_id: "AgoQZ12VWLotRG6u3pudLlbhvhIGY2VsbC1j",
                    connected_at: None,
                    disconnected_at: None,
                },
            ),
            type_: AutomodMessageUpdate,
            version: "1",
        },
        message: Notification(
            AutomodMessageUpdateV1Payload {
                broadcaster_user_id: "129546453",
                broadcaster_user_login: "nerixyz",
                broadcaster_user_name: "nerixyz",
                user_id: "489584266",
                user_login: "uint128",
                user_name: "uint128",
                moderator_user_id: "129546453",
                moderator_user_login: "nerixyz",
                moderator_user_name: "nerixyz",
                message_id: "8b722958-741f-4013-8a8b-c7793d3aef9f",
                message: AutomodMessage {
                    text: "boobs",
                    fragments: [
                        Text {
                            text: "boobs",
                        },
                    ],
                },
                category: Sexwords,
                level: 4,
                status: Approved,
                held_at: "2024-11-03T11:53:45.331308397Z",
            },
        ),
    },
)
