src/eventsub/automod/message/snapshots/twitch_api__eventsub__automod__message__update__parse_payload_v2_automod.snap
---
source: src/eventsub/automod/message/update.rs
expression: parsed
---
AutomodMessageUpdateV2(
    Payload {
        subscription: EventSubscriptionInformation {
            id: "5d64b907-001e-4cf1-9227-37871c7ce1b0",
            status: Enabled,
            cost: 0,
            condition: AutomodMessageUpdateV2 {
                broadcaster_user_id: "129546453",
                moderator_user_id: "129546453",
            },
            created_at: "2024-11-18T19:25:05.666970955Z",
            transport: Websocket(
                WebsocketTransportResponse {
                    session_id: "AgoQSrkrRHHrQsS-i4xbndeC0hIGY2VsbC1j",
                    connected_at: None,
                    disconnected_at: None,
                },
            ),
            type_: AutomodMessageUpdate,
            version: "2",
        },
        message: Notification(
            AutomodMessageUpdateV2Payload {
                broadcaster_user_id: "129546453",
                broadcaster_user_login: "nerixyz",
                broadcaster_user_name: "nerixyz",
                user_id: "489584266",
                user_login: "uint128",
                user_name: "uint128",
                moderator_user_id: "129546453",
                moderator_user_login: "nerixyz",
                moderator_user_name: "nerixyz",
                message_id: "2a867e45-a4d3-4e7e-a5cc-a9a00ee98bf7",
                message: AutomodMessage {
                    text: "Kappa ass",
                    fragments: [
                        Emote {
                            text: "Kappa",
                            emote: AutomodMessageEmote {
                                id: "25",
                                emote_set_id: "0",
                            },
                        },
                        Text {
                            text: " ",
                        },
                        Text {
                            text: "ass",
                        },
                    ],
                },
                status: Denied,
                held_at: "2024-11-18T19:26:37.707305502Z",
                reason: Automod(
                    AutomodMessageInfo {
                        category: Swearing,
                        level: 4,
                        boundaries: [
                            AutomodMessageBoundary {
                                start_pos: 6,
                                end_pos: 8,
                            },
                        ],
                    },
                ),
            },
        ),
    },
)
